--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Django = "^4.0.5"
 djangorestframework = "^3.13.1"
 django-cors-headers = "^3.12.0"
+pydantic = "^1.9.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
