--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.0.5"
 djangorestframework = "^3.13.1"
 django-cors-headers = "^3.12.0"
 pydantic = "^1.9.1"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
