--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.13.1"
 django-cors-headers = "^3.12.0"
 pydantic = {extras = ["dotenv"], version = "^1.9.1"}
 aiohttp = "^3.8.1"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
